--- a/kwitter.css
+++ b/kwitter.css
@@ -1,6 +1,7 @@
 body{
     background-color:darkorange;
     color: white;
+    margin-top: 25px;
 }
 .header{
     font-family: 'Hammersmith One', sans-serif;
